use leg width instead of pushing jobs to prevent misaligned leg dragover

--- a/styles.css
+++ b/styles.css
@@ -81,17 +81,57 @@ body {
     animation-fill-mode: forwards;
 }
 
-@keyframes scale_leg {
+/* @keyframes scale_leg {
     from {transform: scale(0, 0);}
     to {transform: scale(2rem);}
-}
+
+} */
+
+@keyframes scale_leg2 {
+    from {
+        width: var(--from-width);
+    }
+  
+    to {
+      width: var(--to-width);
+    }
+  }
+
+/* @keyframes scale_leg3 {
+    from {transform: scale(1, 1);}
+    to {transform: scale(var(--scale-ratio), 1);}
+} */
+
+@keyframes contract_leg {
+    from {
+        width: var(--to-width);
+    }
+  
+    to {
+      width: var(--from-width);
+    }
+  }
 
 .stretch {
     /* animation : scale_leg 0.2s;
     animation-iteration-count : 1;
     animation-fill-mode: forwards; */
-    transform: scale(1.5, 1);
-    transform-origin: left;
+    animation : scale_leg2 0.1s;
+    animation-iteration-count : 1;
+    animation-fill-mode: forwards;
+    /* transform: scale(var(--scale-ratio), 1);
+    transform-origin: left; */
+}
+
+.contract {
+    /* animation : scale_leg 0.2s;
+    animation-iteration-count : 1;
+    animation-fill-mode: forwards; */
+    animation : contract_leg 0.1s;
+    animation-iteration-count : 1;
+    animation-fill-mode: forwards;
+    /* transform: scale(var(--scale-ratio), 1);
+    transform-origin: left; */
 }
 
 .hide {
@@ -111,5 +151,9 @@ body {
     /* width: 30px; */
     height: 1rem;
     /* position: static; */
+    /* transform-origin: left; */
+    /* background-color: black; */
+    /* --scale-ratio: 1.0; */
+    will-change: transform;
 
 }
